# cwipc

./: .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE.txt  readme.md  vcpkg-configuration.json  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: build.yml
Testing/: TAG
Testing/20260202-1039/: Test.xml
doc/: api-c.md  api-cpp.md  api-csharp.md  api-overview.md  api-python.md  build-from-source.md  cli-tools.md  distribution.md  hardware-setup.md  index.md  installation.md  introduction.md  raw-recording.md  registration.md
docs/: api-cpp.rst  api-csharp.rst  api-overview.rst  api-python.rst  build-from-source.rst  cli-tools.rst  conf.py  distribution.rst  hardware-setup.rst  index.rst  installation.rst  introduction.rst  makedoc.sh  raw-recording.rst  registration.rst  requirements.txt
docs/_build/html/: .buildinfo  api-c.html  api-cpp.html  api-csharp.html  api-overview.html  api-python.html  build-from-source.html  cli-tools.html  distribution.html  genindex.html  hardware-setup.html  index.html  installation.html  introduction.html  objects.inv  raw-recording.html  registration.html  search.html  searchindex.js
docs/_build/html/.doctrees/: api-c.doctree  api-cpp.doctree  api-csharp.doctree  api-overview.doctree  api-python.doctree  build-from-source.doctree  cli-tools.doctree  distribution.doctree  environment.pickle  hardware-setup.doctree  index.doctree  installation.doctree  introduction.doctree  raw-recording.doctree  registration.doctree
docs/_build/html/_sources/: api-c.rst.txt  api-python.rst.txt  (+5 more)
docs/api/cpp/: class_view_hierarchy.rst.include  classcwipc__activesource.rst  classcwipc__decoder.rst  classcwipc__encoder.rst  classcwipc__encodergroup.rst  classcwipc__metadata.rst  classcwipc__pointcloud.rst  classcwipc__sink.rst  classcwipc__source.rst  define_api__pcl_8h_1a4d7bd596f5802180919c906acc209987.rst  define_cwipc__codec_2include_2cwipc__codec_2api_8h_1a042c46e4eade7347ce87e812407429cd.rst  define_cwipc__codec_2include_2cwipc__codec_2api_8h_1a21f4506b6725168ff3617087d2fe88ed.rst  define_cwipc__codec_2include_2cwipc__codec_2api_8h_1a38708e158a76762cfe79e4d075fbbcaf.rst  define_cwipc__codec_2include_2cwipc__codec_2api_8h_1a7b4d6af05a620da0cc8e49bfbf2f5cd9.rst  define_cwipc__codec_2include_2cwipc__codec_2api_8h_1a7f80da0e5eb8a996aa0dd1210c2fea13.rst  define_cwipc__codec_2include_2cwipc__codec_2api_8h_1ac45c7dd5fc8e6414b10f6a3bba323fce.rst  define_cwipc__codec_2include_2cwipc__codec_2api_8h_1ad5f5d69a08901572d1bd427187a2f619.rst  define_cwipc__kinect_2include_2cwipc__kinect_2api_8h_1ac2cc1de934b8eccdc33c81ee69c5ad5c.rst  define_cwipc__orbbec_2include_2cwipc__orbbec_2api_8h_1a1f882b2dcb2a4f6df58460a4a4575d31.rst  define_cwipc__realsense2_2include_2cwipc__realsense2_2api_8h_1aad13eaf063f7411388c32288030f172e.rst  define_cwipc__util_2include_2cwipc__util_2api_8h_1a27eb8f15a488af550c9706fcc0ed57f6.rst  define_cwipc__util_2include_2cwipc__util_2api_8h_1a568b9da7dac12cdbfad8e489d4a45347.rst  define_cwipc__util_2include_2cwipc__util_2api_8h_1a6463ea8060b33fd7d0ab2cead08962c9.rst  define_cwipc__util_2include_2cwipc__util_2api_8h_1a9b1043f0684ec938bd74a8bf92165f11.rst  define_cwipc__util_2include_2cwipc__util_2api_8h_1aaf5113c8e06bf8b19220aa62dfa9ba6c.rst  define_cwipc__util_2include_2cwipc__util_2api_8h_1ad1f261ef84d8d82ca1a14d74ef3fce6b.rst  define_cwipc__util_2include_2cwipc__util_2api_8h_1ae30a9fa86527c3f1bfab3485bd81c103.rst  define_cwipc__util_2include_2cwipc__util_2api_8h_1afc012f36fdc4fd28c412f90b1c9243f9.rst  dir__Users_jack_src_VRTogether_cwipc_cwipc_codec_include.rst  dir__Users_jack_src_VRTogether_cwipc_cwipc_codec_include_cwipc_codec.rst  dir__Users_jack_src_VRTogether_cwipc_cwipc_kinect_include.rst  dir__Users_jack_src_VRTogether_cwipc_cwipc_kinect_include_cwipc_kinect.rst  dir__Users_jack_src_VRTogether_cwipc_cwipc_orbbec_include.rst  dir__Users_jack_src_VRTogether_cwipc_cwipc_orbbec_include_cwipc_orbbec.rst  dir__Users_jack_src_VRTogether_cwipc_cwipc_realsense2_include.rst  dir__Users_jack_src_VRTogether_cwipc_cwipc_realsense2_include_cwipc_realsense2.rst  dir__Users_jack_src_VRTogether_cwipc_cwipc_util_include_cwipc_util.rst  dir_cwipc_codec.rst  dir_cwipc_kinect.rst  dir_cwipc_orbbec.rst  (+131 more)
doxygen/: Doxyfile  overview.md  overview_cpp.md  overview_python.md
sandbox/: find_aruco.py  genregtest.py  getgitversion.sh  open3d_bug.py  pullall.sh  readme.md  registration_coarse.py  registration_error_compute.py  registration_error_fix.py  registration_error_fix_fast.py  rotate_cameraconfigs.py  threedpointfinder.py  timing_cwipc_downsample.py  timing_tests.py  voxelize_curve.py  voxelize_curve_spreadsheet.numbers
sandbox/aruco/: target-a4-aruco-0.pages  target-a4-aruco-aux-1.pages  target-a4-aruco-aux-2.pages  target-a4-aruco-aux-3.pages  target-a4-aruco-aux-4.pages  target-a4-aruco-aux-5.pages
sandbox/custom_filters/: analyse.py
sandbox/recording-kinect/: cameraconfig.json
sandbox/recording-orbbec/: cameraconfig.json
sandbox/recording-realsense2/: cameraconfig.json
sandbox/teaser_tests/: Readme.md  download.sh
scripts/: activate  activate-win.sh  activate.ps1  activate.sh  buildall-win.sh  buildall.sh  install-3rdparty-full-win1064-asadmin.ps1  install-3rdparty-full-win1064.ps1  install-3rdparty-full-windows-asadmin.ps1  install-3rdparty-full-windows.ps1  install-3rdparty-macos.sh  install-3rdparty-osx1015.sh  install-3rdparty-ubuntu2004.sh  install-3rdparty-ubuntu2204.sh  install-3rdparty-ubuntu2404.sh  install-3rdparty-win1064.sh  install-3rdparty-windows-asadmin.ps1  install-3rdparty-windows.ps1  install-3rdparty-windows.sh  install-orbbecsdk-osx.sh  install-orbbecsdk-ubuntu2404.sh  install-orbbecsdk-win1064.ps1  nightly.sh  run-cwipc-check-fix.bat  run-cwipc-check.bat  run-cwipc-view-synthetic.bat
unity/nl.cwi.dis.cwipc/: package.json
unity/nl.cwi.dis.cwipc/Runtime/: cwipc.asmdef
unity/nl.cwi.dis.cwipc/Samples/: KinectPointcloud.unity  RealsensePointcloud.unity  SamplePointcloud.unity
vcpkg-additions/triplets/: arm64-android-release.cmake
(+14 files in other folders)
